Bug 101873 - [guc] gem_exec_fence subtests fail (wq reservation)
Summary: [guc] gem_exec_fence subtests fail (wq reservation)
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-21 19:15 UTC by Armando Antonio
Modified: 2018-02-13 16:40 UTC (History)
1 user (show)

See Also:
i915 platform: BXT, CFL, SKL
i915 features: GEM/execlists


Attachments
kernel log (451.94 KB, text/plain)
2017-07-21 19:15 UTC, Armando Antonio
no flags Details
output (10.74 KB, text/plain)
2017-07-21 19:16 UTC, Armando Antonio
no flags Details
dmesg log (312.20 KB, text/plain)
2017-07-21 19:16 UTC, Armando Antonio
no flags Details
dmesg_GLK (322.00 KB, text/plain)
2017-07-21 23:10 UTC, Luis Botello
no flags Details
IGT_output_GLK (1.70 KB, text/plain)
2017-07-21 23:11 UTC, Luis Botello
no flags Details

Description Armando Antonio 2017-07-21 19:15:57 UTC
Created attachment 132820 [details]
kernel log

The following test fail on SKL with latest configuration

====================================================
Test list
====================================================
igt@gem_exec_fence@expired-history
igt@gem_exec_fence@long-history


====================================================
Graphic Stack
====================================================
Component: drm
    tag: libdrm-2.4.81-27-gac21401
    commit: ac214017904b31bc5f80f802d748d5f4f3149d22
Component: cairo
    tag: 1.15.6-2-g57b4050
    commit: 57b40507dda3f58dfc8635548d606b86dc7bcf51
Component: intel-gpu-tools
    tag: intel-gpu-tools-1.19-88-ga844ccb
    commit: a844ccbdbab9fd16c37de81281c6281bc800e97a
Component: piglit
    tag: piglit-v1
    commit: 8717219b07c0cf2853540c373725a23654467d45
======================================
             Software
======================================
kernel version              : 4.13.0-rc1-drm-tip-ww29-commit-e50c6fe+
/bin/bash: SKL-2-NUC6i5SYB: command not found
architecture                : x86_64
os version                  : Ubuntu 16.10
os codename                 : yakkety
kernel driver               : i915
bios revision               : 5.6
bios release date           : 05/27/2016
hardware acceleration       : disabled
swap partition              : enabled on (/dev/sda3)

======================================
        Graphic drivers
======================================
modesetting                 : enabled
modesetting compiled for    : 1.18.4 X.Org Video Driver
xorg-xserver                : 1.18.4
libdrm                      : 2.4.82
cairo                       : 1.15.7
intel-gpu-tools (tag)       : intel-gpu-tools-1.19-112-g493151b
intel-gpu-tools (commit)    : 493151b

======================================
             Hardware
======================================
platform                   : Skylake-Nuc
motherboard id             : NUC6i5SYB
form factor                : Desktop
cpu family                 : Core i5
cpu family id              : 6
cpu information            : Intel(R) Core(TM) i5-6260U CPU @ 1.80GHz
gpu card                   : Intel Corporation Iris Graphics 540 (rev 0a) (prog-if 00 [VGA controller])
memory ram                 : 15.58 GB
max memory ram             : 32 GB
cpu thread                 : 4
cpu core                   : 2
cpu model                  : 78
cpu stepping               : 3
socket                     : None
signature                  : Type 0, Family 6, Model 78, Stepping 3
hard drive                 : 223GiB (240GB)
current cd clock frequency : 337500 kHz
maximum cd clock frequency : 675000 kHz

displays connected         : HDMI-A-1 DP-1
Comment 1 Armando Antonio 2017-07-21 19:16:20 UTC
Created attachment 132821 [details]
output
Comment 2 Armando Antonio 2017-07-21 19:16:42 UTC
Created attachment 132822 [details]
dmesg log
Comment 3 Chris Wilson 2017-07-21 19:19:00 UTC
GuC? Does it fail when run normally?
Comment 4 Luis Botello 2017-07-21 23:10:42 UTC
Created attachment 132823 [details]
dmesg_GLK
Comment 5 Luis Botello 2017-07-21 23:11:03 UTC
Created attachment 132824 [details]
IGT_output_GLK
Comment 6 Luis Botello 2017-07-21 23:12:26 UTC
Issue is also seen on GLK.
As additional info, if GuC FW is not loaded, test result is pass.
Comment 7 Chris Wilson 2017-07-22 08:46:23 UTC
What we need is the kernel stack just prior to timeout.
Comment 8 Chris Wilson 2017-07-22 08:49:00 UTC
My guess is that the wq is full, it is returning EAGAIN until timeout. There is a plan to remove that early reservation.
Comment 9 Ricardo Madrigal 2017-07-24 17:53:51 UTC
The following tests fail on BXT with latest configuration

====================================================
Test list
====================================================
igt@gem_exec_fence@expired-history
igt@gem_exec_fence@long-history

====================================================
Graphic Stack
====================================================
Component: drm
    tag: libdrm-2.4.81-27-gac21401
    commit: ac214017904b31bc5f80f802d748d5f4f3149d22

Component: cairo
    tag: 1.15.6-2-g57b4050
    commit: 57b40507dda3f58dfc8635548d606b86dc7bcf51

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.19-88-ga844ccb
    commit: a844ccbdbab9fd16c37de81281c6281bc800e97a

Component: piglit
    tag: piglit-v1
    commit: 8717219b07c0cf2853540c373725a23654467d45


======================================
             Hardware
======================================
motherboard model          : NUC6CAYS
motherboard id             : NUC6CAYB
form factor                : Desktop
manufacturer               : Intelcorporation
cpu family                 : Celeron
cpu family id              : 6
cpu information            : Intel(R) Celeron(R) CPU J3455 @ 1.50GHz
gpu card                   : Intel Corporation Device 5a85 (rev 0b) (prog-if 00 [VGA controller])
memory ram                 : 15.54 GB
max memory ram             : 32 GB
cpu thread                 : 4
cpu core                   : 4
cpu model                  : 92
cpu stepping               : 9
socket                     : Other
signature                  : Type 0, Family 6, Model 92, Stepping 9
hard drive                 : 279GiB (300GB)
current cd clock frequency : 288000 kHz
maximum cd clock frequency : 624000 kHz
displays connected         : DP-1 DP-2
Comment 10 maria guadalupe 2017-08-08 21:04:33 UTC
These tests passed over GLK with the following configuration 

Test list
====================================================
igt@gem_exec_fence@expired-history
igt@gem_exec_fence@long-history
 
  Software
======================================
kernel version              : 4.13.0-rc4-drm-tip-ww32-commit-ef8894e+
hostname                    : gfx-desktop
architecture                : x86_64
os version                  : Ubuntu 17.04
os codename                 : zesty
kernel driver               : i915
bios revision               : 52.23
bios release date           : 06/24/2017
ksc                         : 1.36
hardware acceleration       : disabled
swap partition              : enabled on (/dev/sda2)

======================================
        Graphic drivers
======================================
intel-gpu-tools             : 1.17-1

======================================
             Hardware
======================================
platform                   : Geminilake
motherboard model          : Geminilake
motherboard id             : GLKRVP1DDR4(05)
form factor                : Hand Held
manufacturer               : IntelCorp.
cpu family                 : Other
cpu family id              : 6
cpu information            : Genuine Intel(R) CPU @ 1.10GHz
gpu card                   : Intel Corporation Device 3184 (rev 01) (prog-if 00 [VGA controller])
memory ram                 : 5.64 GB
max memory ram             : 16 GB
cpu thread                 : 4
cpu core                   : 4
cpu model                  : 122
cpu stepping               : 0
socket                     : Other
hard drive                 : 223GiB (240GB)
current cd clock frequency : 79200 kHz
maximum cd clock frequency : 316800 kHz
Comment 11 Hector Velazquez 2017-09-06 14:43:50 UTC
The following tests FAIL on SKL 

Tests List:

igt@gem_exec_fence@expired-history
igt@gem_exec_fence@long-history


======================================
        Output
======================================



This is my configuration:

======================================
        Graphic stack
======================================

Component: drm
    tag: libdrm-2.4.81-52-g05a830d
    commit: 05a830d382382905d87b55af90aa109fb76e4c16

Component: cairo
    tag: 1.15.6-30-gc29db4f
    commit: c29db4f0de52727406a8b62f4da9a382084b5a79

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.19-234-g490b386
    commit: 490b386ae36d393cdea514882a2437c6e964c13f

Component: piglit
    tag: piglit-v1
    commit: dab15137044c34023b1a843e72e781b03b17548b

======================================
	     Software
======================================
kernel version              : 4.13.0-drm-tip-ww36-commit-9dd459e+
hostname                    : gfx-desktop
architecture                : x86_64
os version                  : Ubuntu 16.10
os codename                 : yakkety
kernel driver               : i915
bios revision               : 5.6
bios release date           : 09/29/2016
hardware acceleration       : only available on X
swap partition              : enabled on (/dev/sda3)

======================================
	Graphic drivers
======================================
libdrm                      : 2.4.83
cairo                       : 1.15.9
intel-gpu-tools (tag)       : intel-gpu-tools-1.19-234-g490b386
intel-gpu-tools (commit)    : 490b386

======================================
	     Hardware
======================================

======================================
	     Firmware
======================================
dmc fw loaded             : yes
dmc version               : 1.26
guc fw loaded             : SUCCESS
guc version wanted        : 6.1
guc version found         : 6.1
huc fw loaded             : yes

======================================
	     kernel parameters
======================================
quiet splash drm.debug=0x1e i915.enable_guc_submission=2 i915.enable_guc_loading=2 i915.alpha_support=1
Comment 12 Chris Wilson 2017-09-18 14:04:53 UTC
commit 85e2fe679e053326191f92b923f22a834f82cb53
Author: Michał Winiarski <michal.winiarski@intel.com>
Date:   Thu Sep 14 10:32:13 2017 +0200

    drm/i915/guc: Submit GuC workitems containing coalesced requests
    
    To create an upper bound on number of GuC workitems, we need to change
    the way that requests are being submitted. Rather than submitting each
    request as an individual workitem, we can do coalescing in a similar way
    we're handlig execlist submission ports. We also need to stop pretending
    that we're doing "lite-restore" in GuC submission (we would create a
    workitem each time we hit this condition). This allows us to completely
    remove the reservation, replacing it with a compile time check.
    
    v2: Also coalesce when replaying on reset (Daniele)
    v3: Consistent wq_resv - per-request (Daniele)
    v4: Squash removing wq_resv
    v5: Reflect i915_guc_submit argument changes in doc
    v6: Rebase on top of execlists reset/restart fix (Chris,Michał)
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=101873
    Cc: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Daniele Ceraolo Spurio <daniele.ceraolospurio@intel.com>
    Cc: Jeff McGee <jeff.mcgee@intel.com>
    Cc: Michal Wajdeczko <michal.wajdeczko@intel.com>
    Cc: Oscar Mateo <oscar.mateo@intel.com>
    Signed-off-by: Michał Winiarski <michal.winiarski@intel.com>
    Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>
    Link: https://patchwork.freedesktop.org/patch/msgid/20170914083216.10192-2-michal.winiarski@intel.com
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 13 Elizabeth 2017-10-04 19:24:24 UTC
Verified on CFL, 

$ : sudo -E ./intel-graphics/intel-gpu-tools/tests/gem_exec_fence --r *-history
IGT-Version: 1.19-g26d0da4 (x86_64) (Linux: 4.14.0-rc3-drm-tip-ww40-commit-d8f7188+ x86_64)
Using GuC submission
Test requirement not met in function __real_main1458, file gem_exec_fence.c:1478:
Test requirement: gem_has_ring(i915, e->exec_id | e->flags)
Test requirement not met in function __real_main1458, file gem_exec_fence.c:1478:
Test requirement: gem_has_ring(i915, e->exec_id | e->flags)
Ring size: 124 batches
History depth = 19170
Subtest long-history: SUCCESS (7.690s)
Ring size: 124 batches
History depth = 19413
Subtest expired-history: SUCCESS (7.759s)

SKL:

$ : sudo -E ./intel-graphics/intel-gpu-tools/tests/gem_exec_fence --r *-history
IGT-Version: 1.19-g26d0da4 (x86_64) (Linux: 4.14.0-rc3-drm-tip-ww40-commit-d8f7188+ x86_64)
Test requirement not met in function drm_open_driver, file drmtest.c:378:
Test requirement: !(fd<0)
No known gpu found for chipset flags 0x1 (intel)
Last errno: 2, No such file or directory
Subtest long-history: SKIP
Subtest expired-history: SKIP

BXT:

$ : sudo -E ./intel-graphics/intel-gpu-tools/tests/gem_exec_fence --r *-history
IGT-Version: 1.19-g26d0da4 (x86_64) (Linux: 4.14.0-rc3-drm-tip-ww40-commit-d8f7188+ x86_64)
Using GuC submission
Test requirement not met in function __real_main1458, file gem_exec_fence.c:1478:
Test requirement: gem_has_ring(i915, e->exec_id | e->flags)
Test requirement not met in function __real_main1458, file gem_exec_fence.c:1478:
Test requirement: gem_has_ring(i915, e->exec_id | e->flags)
Ring size: 124 batches
History depth = 6609
Subtest long-history: SUCCESS (7.178s)
Ring size: 124 batches
History depth = 6588
Subtest expired-history: SUCCESS (7.189s)
Comment 14 Elizabeth 2018-02-13 16:40:29 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.